correct missing refs

--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -4,8 +4,7 @@
 Quantitative fitness analysis (QFA) is a method for inferring the
 fitness of microbial cultures from their growth curves and can be used
 for genome-wide screening of genetic interaction or drug response (see
-\citet{Addinall2008,Addinall2011,Lawless2010,Banks2012} (drug
-ref)). In QFA, cultures are grown on solid agar plates. When performed
+\citet{Addinall2008,Addinall2011,Lawless2010,Banks2012,Andrew2013}). In QFA, cultures are grown on solid agar plates. When performed
 using a high-throughput protocol, growth curves are automatically
 captured for mixed arrays of typically 384 (independent genetic
 strains)/(cultures). It is possible that growth curves are affected by
