--- a/docs/background.tex
+++ b/docs/background.tex
@@ -6,7 +6,7 @@
 \subsection{A Comparison of Methods for Screening Strain Fitness }
 
 QFA and SGA are methods for fitness screening using cultures grown on solid agar, both of
-which can be performed using a high-throughput protocol (sga ref) \cite{Banks2012}. SGA
+which can be performed using a high-throughput protocol \citet{Baryshnikova2010sga,Banks2012}. SGA
 uses pinned cultures of higher initial cell density than the dilute liquid cultures used
 in QFA. Although SGA allows for more repeats per plate (1536 cultures vs 384 cultures in
 QFA), more of the growth curve can be captured with QFA so fits of growth models are more
@@ -39,7 +39,7 @@ competition or signalling effects. However, this approach has lower throughput (
     yeast growing on solid agar, for spotted cultures (circles) and pinned cultures
     (crosses). In A) culture density is plotted on a linear scale. In B) culture density
     is plotted on a logarithmic scale. C) shows images of the spotted and pinned cultures
-    corresponding to the data in A) \& B). Courtesy of \citet{Lawless2010}.}
+    corresponding to the data in A) \& B) \citep{Lawless2010}.}
   \label{fig:qfa_and_sga_growth_curves}
 \end{Figure}
 \begin{multicols}{2}
@@ -52,7 +52,7 @@ competition or signalling effects. However, this approach has lower throughput (
   \includegraphics[width=\linewidth]{qfa_growth_array}
   \captionof{figure}{Growth curves, captured automatically by
     Colonyzer \citep{Lawless2010}, of 308 cultures in a QFA
-    procedure. Reproduced ??with permission?? from \citet{Banks2012}.}
+    procedure \citep{Banks2012}.}
   \label{fig:qfa_curves}
 \end{Figure}
 \begin{multicols}{2}
@@ -60,9 +60,9 @@ competition or signalling effects. However, this approach has lower throughput (
 
 \subsection{Competition and Signalling}
 
-At the beginning of QFA and SGA nutrients are distributed uniformly throughout the
+At the beginning of QFA and SGA, nutrients are distributed uniformly throughout the
 agar. During incubation, cultures grow, consuming nutrients and creating gradients in
-nutrient density. A QFA plate taken partway through (at the end of?) incubation can be
+nutrient density. A QFA plate taken partway through incubation can be
 seen in Figure~\ref{fig:15_spots}. As some cultures grow much faster than their
 neighbours, using more nutrients, we believe that diffusion of nutrients along gradients
 between cultures might cause a significant competition effect. Growth of yeast cultures
@@ -75,8 +75,7 @@ to changes in cell density (quorum sensing) (see \citet{sprague2006,honigberg201
   \centering
   \includegraphics[width=\linewidth]{5658435523_c2e43729f1_b}
   \captionof{figure}{An image of 15 cultures on a section of solid agar from a QFA
-    procedure. Image taken with permission from the Colonyzer \citep{Lawless2010} GitHub
-    repo https://github.com/CnrLwlss/Colonyzer}
+    procedure. \citep{Lawless2010} https://github.com/CnrLwlss/Colonyzer}
   \label{fig:15_spots}
 \end{Figure}
 
