--- a/docs/objs.tex
+++ b/docs/objs.tex
@@ -6,16 +6,16 @@ The project can be broken down into the following set of objectives:
 \item Develop models of culture growth on solid agar which account for
   competition for nutrients and signalling between cultures.
 \item Analyse experimental data to determine whether competition for nutrients and signalling
-  affects colony growth. If so, determine size of the effect on different fitness measures.
+  affect colony growth. If so, determine size of the effect on different fitness measures.
 \item Compare competition and signalling effects in different
   experimental designs in order to design experiments which minimise
   these effects. For instance, compare culture and agar geometries,
   initial culture and nutrient densities, and the effect of randomisation. Also
   look at MiniQFA data to investigate the effect of diffusion across agar height.
 \item Develop a model of competition and signalling in terms of
-  parameters of the logistic model of population growth in oder to
-  compare fitness measures to measures from previous studies which
-  assume independence.
+  parameters of the logistic model of population growth to compare
+  fitness measures to measures from previous studies which assume
+  independence.
 \item Continuously package SBML models and Python analysis tools so
   that they may be used in subsequent stages of the project and
   eventually by other researchers. Conform to minimum information standards so
