--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -3,18 +3,27 @@
 \label{sec:aims}
 Quantitative fitness analysis (QFA) is a method for inferring the
 fitness of microbial cultures from their growth curves and can be used
-for genome-wide screening of genetic interaction or drug response (see
-\citet{Addinall2008,Addinall2011,Lawless2010,Banks2012,Andrew2013}). In QFA, cultures are grown on solid agar plates. When performed
-using a high-throughput protocol, growth curves are automatically
-captured for mixed arrays of typically 384 (independent genetic
-strains)/(cultures). It is possible that growth curves are affected by
-competition for nutrients and/or signalling between cultures which is
-not accounted for in past analyses of QFA data.
+for genome-wide screening for genetic interactions or drug responses
+(see
+\citet{Addinall2008,Addinall2011,Lawless2010,Banks2012,Andrew2013}). In
+QFA, growth curves are automatically captured for arrays of typically
+384 cultures grown on solid agar, with each culture containing an
+individual genetic strain. Plates can contain any combination of
+different strains or repeats. Fitness is a good phenotype for measuring GI because...
+
+Usually QFA cultures are assumed to grow independently
+(e.g. \citet{Addinall2011}). We aim to test the validity of this
+assumption in a range of different QFA experiments. We propose a new
+model of population growth which includes competition between
+cultures. We expect that accounting explicitly for competition
+in analysis of QFA data will increase the reproducibility of fitness
+estimates and ultimately increase the statistical power of QFA in
+screens for genetic interactions and drug responses.
 
 An analysis by \citet{Baryshnikova2010}, of data obtained using
 1536-pin synthetic genetic array (SGA), an alternative procedure also
 using an array of cultures on solid agar, attempts to normalise for
-systematic variation in growth curve observations, which may include
+systematic variation in growth observations, which may include
 variation from competition and signalling effects, using statistical
 techniques aimed at improving the correlation between repeats of
 identical mutant strains at different locations. In order to learn
@@ -22,28 +31,22 @@ more about the sources of systematic variation in both QFA and SGA
 experiments, and to develop analyses and experimental designs for
 dealing with them, this project aims to account for competition and
 signalling mechanistically. We then aim to determine what effect
-accounting for competition and signalling has on measures of
-fitness. We will study unpublished QFA and SGA data for the model
-organism \textit{Saccharomyces cerevisiae}. We will package all models
-and analysis tools so that they may be used in future QFA and SGA
-studies or to reanalyse data from past studies.
+accounting for competition and signalling has on variability and rank
+order of fitness estimates. We will study unpublished QFA data for the
+model organism \textit{Saccharomyces cerevisiae}. We will package all
+models and analysis tools so that they may be used in future studies
+or to reanalyse data from past studies.
 
 \subsection{Hypotheses}
-This project aims to determine whether
-the following hypotheses are correct:
+This project aims to test the following hypotheses:
 \begin{itemize}
-\item %Nutrient and/or signal molecules diffuse through agar at a rate
-  %sufficient to induce competition between adjacent cultures.
-  Growth of cultures in QFA and SGA experiments is affected by
-  competition for nutrients and/or signalling.
+\item Growth of cultures in fitness screening experiments using solid
+  agar is affected by competition for nutrients and/or signalling.
 \item By accounting mechanistically for competition effects, it will
-  be possible to design analyses and experiments which minimise them.
-\item Accounting for competition effects will/may improve the power to
-  infer genetic interactions.
-
-  ??Are we directly measuring the size of this effect or just saying
-  that if fitness measures are affected then this will have some
-  effect on genetic interaction measures??
+  be possible to design analyses and experiments which minimise these effects.
+\item Explicitly accounting for competition effects in data analysis
+  will improve the power to infer genetic interactions and drug
+  responses.
 \end{itemize}
 
 %%% Local Variables:
