Add liquid culture ref

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -356,6 +356,18 @@ journal = {Bioinformatics}
 }
 
 
+@article{Jasnos2007,
+  title={Epistatic buffering of fitness loss in yeast double deletion strains},
+  author={Jasnos, Lukasz and Korona, Ryszard},
+  journal={Nature genetics},
+  volume=39,
+  number=4,
+  pages={550--554},
+  year=2007,
+  publisher={Nature Publishing Group}
+}
+
+
 @article{Lawless2010,
 abstract = {High-throughput screens comparing growth rates of arrays
                   of distinct micro-organism cultures on solid agar
